Don't reframe leaf frames just because they don't have generated content that style says they should have -- leaves just don't have generated content.  Bug 315541, r+sr=dbaron